Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sm_series/examples/cpp/vita49/gui/vrt_parser_gui/sm_api.h


        typedef unsigned char      uint8_t;
        typedef unsigned short     uint16_t;
#define SM_INVALID_HANDLE (-1)
#define SM_TRUE (1)
#define SM_FALSE (0)
#define SM_MAX_DEVICES (9)
#define SM_ADDR_ANY ("0.0.0.0")
#define SM_DEFAULT_ADDR ("192.168.2.10")
#define SM_DEFAULT_PORT (51665)
#define SM_AUTO_ATTEN (-1)
#define SM_MAX_ATTEN (6)
#define SM_MAX_REF_LEVEL (20.0)
#define SM_MAX_SWEEP_QUEUE_SZ (16)
#define SM200_MIN_FREQ (100.0e3)
#define SM200_MAX_FREQ (20.6e9)
#define SM435_MIN_FREQ (100.0e3)
#define SM435_MAX_FREQ (44.2e9)
#define SM435_MAX_FREQ_IF_OPT (40.8e9)
#define SM_MAX_IQ_DECIMATION (4096)
#define SM_PRESELECTOR_MAX_FREQ (645.0e6)
#define SM_FAST_SWEEP_MIN_RBW (30.0e3)
#define SM_REAL_TIME_MIN_SPAN (200.0e3)
#define SM_REAL_TIME_MAX_SPAN (160.0e6)
#define SM_MIN_SWEEP_TIME (1.0e-6)
#define SM_MAX_SWEEP_TIME (100.0)
#define SM_SPI_MAX_BYTES (4)
#define SM_GPIO_SWEEP_MAX_STEPS (64)
#define SM_GPIO_SWITCH_MAX_STEPS (64)
#define SM_GPIO_SWITCH_MIN_COUNT (2)
#define SM_GPIO_SWITCH_MAX_COUNT (4194303 - 1)
#define SM_TEMP_WARNING (95.0)
#define SM_TEMP_MAX (102.0)
#define SM_MAX_SEGMENTED_IQ_SEGMENTS (250)
#define SM_MAX_SEGMENTED_IQ_SAMPLES (520e6)
#define SM435_IF_OUTPUT_FREQ (1.5e9)
#define SM435_IF_OUTPUT_MIN_FREQ (24.0e9)
#define SM435_IF_OUTPUT_MAX_FREQ (43.5e9)
typedef enum SmStatus {
    smCalErr = -1003,
    smMeasErr = -1002,
    smErrorIOErr = -1001,
    smInvalidCalibrationFileErr = -200,
    smInvalidCenterFreqErr = -101,
    smInvalidIQDecimationErr = -100,
    smJESDErr = -54,
    smNetworkErr = -53,
    smFx3RunErr = -52,
    smMaxDevicesConnectedErr = -51,
    smFPGABootErr = -50,
    smBootErr = -49,
    smGpsNotLockedErr = -16,
    smVersionMismatchErr = -14,
    smAllocationErr = -13,
    smSyncErr = -11,
    smInvalidSweepPosition = -10,
    smInvalidConfigurationErr = -8,
    smConnectionLostErr = -6,
    smInvalidParameterErr = -5,
    smNullPtrErr = -4,
    smInvalidDeviceErr = -3,
    smDeviceNotFoundErr = -2,
    smNoError = 0,
    smSettingClamped = 1,
    smAdcOverflow = 2,
    smUncalData = 3,
    smTempDriftWarning = 4,
    smSpanExceedsPreselector = 5,
    smTempHighWarning = 6,
    smCpuLimited = 7,
    smUpdateAPI = 8,
    smInvalidCalData = 9,
} SmStatus;
typedef enum SmDataType {
    smDataType32fc,
    smDataType16sc
} SmDataType;
typedef enum SmMode {
    smModeIdle = 0,
    smModeSweeping = 1,
    smModeRealTime = 2,
    smModeIQStreaming = 3,
    smModeIQSegmentedCapture = 5,
    smModeIQSweepList = 6,
    smModeAudio = 4,
    smModeIQ = 3,
} SmMode;
typedef enum SmSweepSpeed {
    smSweepSpeedAuto = 0,
    smSweepSpeedNormal = 1,
    smSweepSpeedFast = 2
} SmSweepSpeed;
typedef enum SmIQStreamSampleRate {
    smIQStreamSampleRateNative = 0,
    smIQStreamSampleRateLTE = 1,
} SmIQStreamSampleRate;
typedef enum SmPowerState {
    smPowerStateOn = 0,
    smPowerStateStandby = 1
} SmPowerState;
typedef enum SmDetector {
    smDetectorAverage = 0,
    smDetectorMinMax = 1
} SmDetector;
typedef enum SmScale {
    smScaleLog = 0,
    smScaleLin = 1,
    smScaleFullScale = 2
} SmScale;
typedef enum SmVideoUnits {
    smVideoLog = 0,
    smVideoVoltage = 1,
    smVideoPower = 2,
    smVideoSample = 3
} SmVideoUnits;
typedef enum SmWindowType {
    smWindowFlatTop = 0,
    smWindowNutall = 2,
    smWindowBlackman = 3,
    smWindowHamming = 4,
    smWindowGaussian6dB = 5,
    smWindowRect = 6
} SmWindowType;
typedef enum SmTriggerType {
    smTriggerTypeImm = 0,
    smTriggerTypeVideo = 1,
    smTriggerTypeExt = 2,
    smTriggerTypeFMT = 3
} SmTriggerType;
typedef enum SmTriggerEdge {
    smTriggerEdgeRising = 0,
    smTriggerEdgeFalling = 1
} SmTriggerEdge;
typedef enum SmBool {
    smFalse = 0,
    smTrue = 1
} SmBool;
typedef enum SmGPIOState {
    smGPIOStateOutput = 0,
    smGPIOStateInput = 1
} SmGPIOState;
typedef enum SmReference {
    smReferenceUseInternal = 0,
    smReferenceUseExternal = 1
} SmReference;
typedef enum SmDeviceType {
    smDeviceTypeSM200A = 0,
    smDeviceTypeSM200B = 1,
    smDeviceTypeSM200C = 2,
    smDeviceTypeSM435B = 3,
    smDeviceTypeSM435C = 4
} SmDeviceType;
typedef enum SmAudioType {
    smAudioTypeAM = 0,
    smAudioTypeFM = 1,
    smAudioTypeUSB = 2,
    smAudioTypeLSB = 3,
    smAudioTypeCW = 4
} SmAudioType;
typedef enum SmGPSState {
    smGPSStateNotPresent = 0,
    smGPSStateLocked = 1,
    smGPSStateDisciplined = 2
} SmGPSState;
typedef struct SmGPIOStep {
    double freq;
    uint8_t mask;
} SmGPIOStep;
typedef struct SmDeviceDiagnostics {
    float voltage;
    float currentInput;
    float currentOCXO;
    float current58;
    float tempFPGAInternal;
    float tempFPGANear;
    float tempOCXO;
    float tempVCO;
    float tempRFBoardLO;
    float tempPowerSupply;
} SmDeviceDiagnostics;
SM_API SmStatus smGetDeviceList(int *serials, int *deviceCount);
SM_API SmStatus smOpenDevice(int *device);
SM_API SmStatus smOpenDeviceBySerial(int *device, int serialNumber);
SM_API SmStatus smOpenNetworkedDevice(int *device,
                                      const char *hostAddr,
                                      const char *deviceAddr,
                                      uint16_t port);
SM_API SmStatus smCloseDevice(int device);
SM_API SmStatus smPreset(int device);
SM_API SmStatus smPresetSerial(int serialNumber);
SM_API SmStatus smNetworkedSpeedTest(int device, double durationSeconds, double *bytesPerSecond);
SM_API SmStatus smGetDeviceInfo(int device, SmDeviceType *deviceType, int *serialNumber);
SM_API SmStatus smGetFirmwareVersion(int device, int *major, int *minor, int *revision);
SM_API SmStatus smHasIFOutput(int device, SmBool *present);
SM_API SmStatus smGetDeviceDiagnostics(int device, float *voltage, float *current, float *temperature);
SM_API SmStatus smGetFullDeviceDiagnostics(int device, SmDeviceDiagnostics *diagnostics);
SM_API SmStatus smGetSFPDiagnostics(int device,
                                    float *temp,
                                    float *voltage,
                                    float *txPower,
                                    float *rxPower);
SM_API SmStatus smSetPowerState(int device, SmPowerState powerState);
SM_API SmStatus smGetPowerState(int device, SmPowerState *powerState);