Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sm_series/examples/csharp/sm_api.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

/*
 * The C# API class for the SM series devices is a class of static members and methods which
 * are simply a 1-to-1 mapping of the C API. This makes is easy to modify and look up
 * functions in the API manual.
 */

enum SmStatus
{
    smCalErr = -1003, // Internal use
    smMeasErr = -1002, // Internal use
    smErrorIOErr = -1001, // Internal use

    // Calibration file unable to be used with the API
    smInvalidCalibrationFileErr = -200,
    // Invalid center frequency specified
    smInvalidCenterFreqErr = -101,
    // IQ decimation value provided not a valid value
    smInvalidIQDecimationErr = -100,

    smJESDErr = -54,
    // Socket/network error
    smNetworkErr = -53,
    // If the core FX3 program fails to run
    smFx3RunErr = -52,
    // Only can connect up to SM_MAX_DEVICES receivers
    smMaxDevicesConnectedErr = -51,
    // FPGA boot error
    smFPGABootErr = -50,
    // Boot error
    smBootErr = -49,

    // Requesting GPS information when the GPS is not locked
    smGpsNotLockedErr = -16,
    // Invalid API version for target device, TBD
    smVersionMismatchErr = -14,
    // Unable to allocate resources needed to configure the measurement mode
    smAllocationErr = -13,

    // Returned when the device detects framing issue on measurement data
    // Measurement results are likely invalid. Device should be preset/power cycled
    smSyncErr = -11,
    // Invalid or already active sweep position
    smInvalidSweepPosition = -10,
    // Attempting to perform an operation that cannot currently be performed.
    // Often the result of trying to do something while the device is currently
    //   making measurements or not in an idle state.
    smInvalidConfigurationErr = -8,
    // Device disconnected, likely USB error detected
    smConnectionLostErr = -6,
    // Required parameter found to have invalid value
    smInvalidParameterErr = -5,
    // One or more required pointer parameters were null
    smNullPtrErr = -4,
    // User specified invalid device index
    smInvalidDeviceErr = -3,
    // Unable to open device
    smDeviceNotFoundErr = -2,

    // Function returned successfully
    smNoError = 0,

    // One or more of the provided settings were adjusted
    smSettingClamped = 1,
    // Measurement includes data which caused an ADC overload (clipping/compression)
    smAdcOverflow = 2,
    // Measurement is uncalibrated, overrides ADC overflow
    smUncalData = 3,
    // Temperature drift occured, measurements uncalibrated, reconfigure the device
    smTempDriftWarning = 4,
    // Warning when the preselector span is smaller than the user selected span
    smSpanExceedsPreselector = 5,
    // Warning when the internal temperature gets too hot. The device is close to shutting down
    smTempHighWarning = 6,
    // Returned when the API was unable to keep up with the necessary processing
    smCpuLimited = 7,
    // Returned when the API detects a device with newer features than what was available
    //   when this version of the API was released. Suggested fix, update the API.
    smUpdateAPI = 8,
    // Calibration data potentially corrupt
    smInvalidCalData = 9,
};

enum SmDataType
{
    smDataType32fc = 0,
    smDataType16sc = 1
};

enum SmMode
{
    smModeIdle = 0,
    smModeSweeping = 1,
    smModeRealTime = 2,
    smModeIQStreaming = 3,
    smModeIQSegmentedCapture = 5,
    smModeIQSweepList = 6,
    smModeAudio = 4,

    // Deprecated
    smModeIQ = 3 // Use smModeIQStreaming
};

enum SmSweepSpeed
{
    smSweepSpeedAuto = 0,
    smSweepSpeedNormal = 1,
    smSweepSpeedFast = 2
};

enum SmIQStreamSampleRate
{
    smIQStreamSampleRateNative = 0,
    smIQStreamSampleRateLTE = 1
};

enum SmPowerState
{
    smPowerStateOn = 0,
    smPowerStateStandby = 1
};

enum SmDetector
{
    smDetectorAverage = 0,
    smDetectorMinMax = 1
};

enum SmScale
{
    smScaleLog = 0, // Sweep in dBm
    smScaleLin = 1, // Sweep in mV
    smScaleFullScale = 2 // N/A
};

enum SmVideoUnits
{
    smVideoLog = 0,
    smVideoVoltage = 1,
    smVideoPower = 2,
    smVideoSample = 3
};

enum SmWindowType
{
    smWindowFlatTop = 0,
    // 1 (N/A)
    smWindowNutall = 2,
    smWindowBlackman = 3,
    smWindowHamming = 4,
    smWindowGaussian6dB = 5,
    smWindowRect = 6
};

enum SmTriggerType
{
    smTriggerTypeImm = 0,
    smTriggerTypeVideo = 1,
    smTriggerTypeExt = 2,
    smTriggerTypeFMT = 3
};

enum SmTriggerEdge
{
    smTriggerEdgeRising = 0,
    smTriggerEdgeFalling = 1
};

enum SmBool
{
    smFalse = 0,
    smTrue = 1
};

enum SmGPIOState
{
    smGPIOStateOutput = 0,
    smGPIOStateInput = 1
};

enum SmReference
{
    smReferenceUseInternal = 0,
    smReferenceUseExternal = 1
};

enum SmDeviceType
{
    smDeviceTypeSM200A = 0,
    smDeviceTypeSM200B = 1,
    smDeviceTypeSM200C = 2,
    smDeviceTypeSM435B = 3,
    smDeviceTypeSM435C = 4
};

enum SmAudioType
{
    smAudioTypeAM = 0,
    smAudioTypeFM = 1,
    smAudioTypeUSB = 2,
    smAudioTypeLSB = 3,
    smAudioTypeCW = 4
};

enum SmGPSState
{
    smGPSStateNotPresent = 0,
    smGPSStateLocked = 1,
    smGPSStateDisciplined = 2
};

[StructLayout(LayoutKind.Sequential)]
public struct SmGPIOStep
{
    public double freq;
    public Byte mask; // gpio bits

    public SmGPIOStep(double f, Byte m)
    {
        this.freq = f;
        this.mask = m;
    }
}

[StructLayout(LayoutKind.Sequential)]
public struct SmDeviceDiagnostics
{
    float voltage;
    float currentInput;
    float currentOCXO;
    float current58;
    float tempFPGAInternal;
    float tempFPGANear;
    float tempOCXO;
    float tempVCO;
    float tempRFBoardLO;
    float tempPowerSupply;
}

class sm_api
{
    public static int SM_INVALID_HANDLE = -1;

    public static int SM_TRUE = 1;
    public static int SM_FALSE = 0;

    public static int SM_MAX_DEVICES = 9;

    // For networked (10GbE devices)
    public static string SM_ADDR_ANY = "0.0.0.0";
    public static string SM_DEFAULT_ADDR = "192.168.2.10";
    public static int SM_DEFAULT_PORT = 51665;

    public static int SM_AUTO_ATTEN = -1;
    // Valid atten values [0,6] or -1 for auto
    public static int SM_MAX_ATTEN = 6;

    public static double SM_MAX_REF_LEVEL = 20.0;

    // Maximum number of sweeps that can be queued up
    // Sweep indices [0,15]
    public static int SM_MAX_SWEEP_QUEUE_SZ = 16;

    public static double SM200_MIN_FREQ = 100.0e3;
    public static double SM200_MAX_FREQ = 20.6e9;

    public static double SM435_MIN_FREQ = 100.0e3;
    public static double SM435_MAX_FREQ = 44.2e9;
    public static double SM435_MAX_FREQ_IF_OPT = 40.9e9;

    public static int SM_MAX_IQ_DECIMATION = 4096;

    // The frequency at which the manually controlled preselector filters end.
    // Past this frequency, the preselector filters are always enabled.
    public static double SM_PRESELECTOR_MAX_FREQ = 645.0e6;

    // Minimum RBW for fast sweep with Nuttall window
    public static double SM_FAST_SWEEP_MIN_RBW = 30.0e3;

    // Min/max span for device configured in RTSA measurement mode
    public static double SM_REAL_TIME_MIN_SPAN = 200.0e3;
    public static double SM_REAL_TIME_MAX_SPAN = 160.0e6;

    // Sweep time range [1us, 100s]
    public static double SM_MIN_SWEEP_TIME = 1.0e-6;
    public static double SM_MAX_SWEEP_TIME = 100.0;

    // Max number of bytes per SPI transfer
    public static int SM_SPI_MAX_BYTES = 4;

    // For GPIO sweeps
    public static int SM_GPIO_SWEEP_MAX_STEPS = 64;

    // For IQ GPIO switching
    public static int SM_GPIO_SWITCH_MAX_STEPS = 64;
    public static int SM_GPIO_SWITCH_MIN_COUNT = 2;
    public static int SM_GPIO_SWITCH_MAX_COUNT = 4194303 - 1; // 2^22 - 1

    // FPGA internal temperature (Celsius)
    // Returned from smGetDeviceDiagnostics()
    public static double SM_TEMP_WARNING = 95.0;
    public static double SM_TEMP_MAX = 102.0;

    // Segmented I/Q captures, SM200B/SM435B only
    public static int SM_MAX_SEGMENTED_IQ_SEGMENTS = 250;
    public static int SM_MAX_SEGMENTED_IQ_SAMPLES = 520000000;

    // IF output option devices only
    public static double SM435_IF_OUTPUT_FREQ = 1.5e9;
    public static double SM435_IF_OUTPUT_MIN_FREQ = 24.0e9;
    public static double SM435_IF_OUTPUT_MAX_FREQ = 43.5e9;

    // USB devices only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetDeviceList(int[] serials, ref int deviceCount);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetDeviceList(int[] serials, SmDeviceType[] deviceTypes, ref int deviceCount);

    // USB devices only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smOpenDevice(ref int device);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smOpenDeviceBySerial(ref int device, int serialNumber);

    // Networked devices only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smOpenNetworkedDevice(ref int device, string hostAddr, string deviceAddr, ushort port);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smCloseDevice(int device);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smPreset(int device);
    // Preset a device that has not been opened with the smOpenDevice functions
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smPresetSerial(int serialNumber);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smNetworkedSpeedTest(int device, double durationSeconds, ref double bytesPerSecond);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetDeviceInfo(int device,
        ref SmDeviceType deviceType, ref int serialNumber);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetFirmwareVersion(int device,
        ref int major, ref int minor, ref int revision);
    // SM435 only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smHasIFOutput(int device, ref SmBool present);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetDeviceDiagnostics(int device,
        ref float voltage, ref float current, ref float temperature);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetFullDeviceDiagnostics(int device, ref SmDeviceDiagnostics diagnostics);
    // Networked devices only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetSFPDiagnostics(int device,
        ref float temp, ref float voltage, ref float txPower, ref float rxPower);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetPowerState(int device, SmPowerState powerState);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetPowerState(int device, ref SmPowerState powerState);
